--- a/index.html
+++ b/index.html
@@ -2,22 +2,50 @@
 <html>
  <head>
   <link type="text/css" rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <title>Auto Safety</title>
  </head>
  <body>
-  <h1>Learn How to A 12-Passenger Van Drive Safely</h1>
-  <p>First you will take a pre-assessment!</p>
+
 <!--Add the button to the assessment-->
-  <ul>Curriculum
-      <li>Unit 1: To learn about the design of a 12-passenger van
-      <li>Unit 2: To learn how to maintain and care for the van (fuel, engine, tires)
-      <li>Unit 3: How to operate the van in poor weather (rain and snow)
-      <li>Unit 4:  How to operate the 12-passenger van (mechanical)
-  </ul>
-     <img src="https://www.youtube.com/watch?v=eyJoez94Gmg"/> 
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/BSsJsVyBIo0" frameborder="0" allowfullscreen></iframe>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Learn How to A 12-Passenger Van Drive Safely</h1>
+        <h2>First you will take a pre-assessment!</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+      </div>
+      <div class="col-md-6">
+        <ul>Curriculum
+            <li><a href="unit1.html">Unit 1: To learn about the design of a 12-passenger van</a></li>
+            <li>Unit 2: To learn how to maintain and care for the van (fuel, engine, tires)</li>
+            <li>Unit 3: How to operate the van in poor weather (rain and snow)</li>
+            <li>Unit 4:  How to operate the 12-passenger van (mechanical)</li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+      </div>
+      <div class="col-md-6">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BSsJsVyBIo0" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="col-md-6">
+      </div>
+    </div>
+  </div>
+
+
+
 
      <h4>Test what you have learned with a post-assessment!</h4>
 <!--Add the button to the post assessment-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  </body>
 </html>
