--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1>Learn How to A 12-Passenger Van Drive Safely</h1>
+        <h1>Learn How to Drive A 12-Passenger Van Drive Safely</h1>
         <h2>First you will take a pre-assessment!</h2>
       </div> <!-- end of col -->
     </div> <!-- end of row -->
